Fixed font parsing issue

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -130,9 +130,12 @@ module-margin-right = 3
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "DejaVu Sans:pixelsize=10;3" ; Main font of the bar
-font-1 = "Material\\-Design\\-Iconic\\-Font:size=13;4" ; For the various different icons
-font-2 = "Noto Sans Mono CJK JP:pixelsize=10;1" ; To make sure Japanese letters would render correctly in some song names
+; Main font of the bar
+font-0 = "DejaVu Sans:pixelsize=10;3" 
+; For the various different icons
+font-1 = "Material\\-Design\\-Iconic\\-Font:size=13;4"
+; To make sure Japanese letters would render correctly in some song names 
+font-2 = "Noto Sans Mono CJK JP:pixelsize=10;1" 
 font-3 = "JetBrains Mono Extra Bold:pixelsize=12;3"
 
 modules-left = workspaces spotify
