--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -137,7 +137,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 #opacity-rule = [ "100:class_g = 'kitty' && focused", "100:class_g = 'kitty' && !focused" ];
 
-opacity-rule = ["90:class_g = 'kitty'"]
+opacity-rule = ["90:class_g = 'kitty'", "90:class_g = 'jetbrains-clion'"]
 
 #################################
 #           Corners             #
@@ -203,7 +203,7 @@ blur-background-exclude = [
 
 blur: {
   method = "kawase";
-  strength = 5;
+  strength = 10;
   background = true;
   background-frame = true;
   background-fixed = true;
@@ -223,9 +223,12 @@ blur: {
 # backend = "glx"
 backend = "glx";
 
+glx-copy-from-front = false;
+
+
 # Enable/disable VSync.
 # vsync = false
-vsync = false;
+vsync = false
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -262,7 +265,7 @@ detect-client-opacity = true;
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
 #
-unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -320,7 +323,7 @@ glx-no-stencil = true;
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
 #
-use-damage = false
+#use-damage = falsei
 #no-use-damage = false;
 
 
