--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -7,7 +7,7 @@
 
 ;; I remember having issues using color variables in the different prefixes for modules
 ;; so they are currently hardcoded right now instead, if you would like to pick a different color
-;; for the icons and whatnot, just find replace "%{F#60CCFA}", with whatever icon color you want,
+;; for the icons and whatnot, just find replace "%{F#ff2b51}", with whatever icon color you want,
 ;; and the text is specificed as "%{F#D8DEE9}", thanks for understanding :)
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -57,14 +57,14 @@ interval = 5
 ;   <label-volume> (default)
 ;   <ramp-volume>
 ;   <bar-volume>
-format-volume = %{F#60CCFA}<ramp-volume>%{F#D8DEE9}  <label-volume>
+format-volume = %{F#ff2b51}<ramp-volume>%{F#D8DEE9}  <label-volume>
 
 ; Available tags:
 ;   <label-muted> (default)
 ;   <ramp-volume>
 ;   <bar-volume>
 format-muted = <label-muted>
-format-muted-prefix = 
+format-muted-prefix = %{F#ff2b51}  
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -72,8 +72,7 @@ label-volume = %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default
-label-muted = " Muted"
-label-muted-foreground = ${color.foreground-alt}
+label-muted = " Muted%{F#D8DEE9}"
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 
@@ -348,7 +347,7 @@ interval = 1
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = %{F#60CCFA}%{F#D8DEE9}
+format-prefix = %{F#ff2b51}%{F#D8DEE9}
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
@@ -378,12 +377,12 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = "%{F#60CCFA}  %{F#D8DEE9}%H:%M %p "
+time = "%{F#ff2b51}  %{F#D8DEE9}%H:%M %p "
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
-time-alt = " %a, %d %b %Y"
+time-alt = "%{F#ff2b51}  %{F#D8DEE9}%d %b %Y"
 
 ; Available tags:
 ;   <label> (default)
@@ -609,7 +608,7 @@ interval = 1
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = %{F#60CCFA}%{F#D8DEE9}
+format-prefix = %{F#ff2b51}%{F#D8DEE9}
 
 ; Available tokens:
 ;   %percentage_used% (default)
@@ -799,7 +798,7 @@ format-disconnected-prefix = 
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{F#60CCFA}%{F#D8DEE9} %downspeed%     %{F#60CCFA}%{F#D8DEE9} %upspeed%"
+label-connected = "%{F#ff2b51}%{F#D8DEE9} %downspeed%     %{F#ff2b51}%{F#D8DEE9} %upspeed%"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -1077,10 +1076,12 @@ label-empty-padding = 2
 type = custom/script
 tail = true
 interval = 1
-format-prefix = "%{F#60CCFA}%{F#D8DEE9}  "
+format-prefix = "%{F#ff2b51}%{F#D8DEE9}  "
 format = "%{T1}<label>%{T1}"
 exec = ~/.config/polybar/scripts/get_spotify_status.sh
-click-left = playerctl play-pause -p spotify
+click-left = playerctl play-pause -p spotify,audacious
+scroll-up = playerctl next -p spotify
+scroll-down = playerctl previous -p spotify
 
 [module/spotify-prev]
 type = custom/script
