--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -12,12 +12,12 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #55000000
+background = #66000000
 foreground = #D8DEE9
 foreground-alt = #8F8F8F
-module-fg = #60CCFA
-primary = #60CCFA
-secondary = #E53935
-alternate = #2d6580
+module-fg = #e3405b
+primary = #e3405b
+secondary = #e3405b
+alternate = #e3405b
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
