Testing some ideas

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -146,11 +146,11 @@ opacity-rule = ["90:class_g = 'kitty'", "100:class_g = 'jetbrains-clion'", "100:
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+corner-radius = 15
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
-  "window_type = 'dock'",
+#  "window_type = 'dock'",
   "window_type = 'desktop'"
 ];
 
@@ -203,7 +203,7 @@ blur-background-exclude = [
 
 blur: {
   method = "dual_kawase";
-  strength = 8;
+  strength = 20;
   background = true;
   background-frame = true;
   background-fixed = true;
@@ -419,7 +419,7 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
+  dock = { shadow = true; clip-shadow-above = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
