--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -48,27 +48,29 @@ monitor-strict = false
 
 ; Tell the Window Manager not to configure the window.
 ; Use this to detach the bar if your WM is locking its size/position.
-override-redirect = false
+override-redirect = true
 
 ; Put the bar at the bottom of the screen
 bottom = false
 
 ; Prefer fixed center position for the `modules-center` block
 ; When false, the center position will be based on the size of the other blocks.
-fixed-center = true
+fixed-center = false
 
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 100%
-height = 30
+width = 1870
+height = 35
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 0%
-offset-y = 0%
+offset-x = 25
+offset-y = 20
+
+wm-restack = i3
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.background}
@@ -85,8 +87,8 @@ foreground = ${color.foreground}
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-radius-top = 0.0
-radius-bottom = 0.0
+radius-top = 10.0
+radius-bottom = 10.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -112,7 +114,7 @@ border-color = ${color.background}
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 2.5
+padding = 3
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
@@ -131,18 +133,18 @@ module-margin-right = 3
 ; See the Fonts wiki page for more details
 
 ; Main font of the bar
-font-0 = "Open Sans:pixelsize=10;2" 
+font-0 = "Open Sans:pixelsize=10;3" 
 ; For the various different icons
 font-1 = "Material\\-Design\\-Iconic\\-Font:size=13;4"
 ; To make sure Japanese letters would render correctly in some song names 
 font-2 = "Noto Sans Mono CJK JP:pixelsize=10;1" 
 font-3 = "JetBrains Mono Extra Bold:pixelsize=12;3"
-font-4 = "Noto Sans:pixelsize=10;2"
+font-4 = "Noto Sans:pixelsize=10;3"
 font-5 = "JetBrainsMonoNL Nerd Font:size=16;4"
 
 modules-left = arch workspaces spotify
 modules-center = title 
-modules-right = battery cpu memory network-down network-up pulseaudio date
+modules-right = cpu memory network-down network-up pulseaudio date
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
