--- a/i3/config
+++ b/i3/config
@@ -181,13 +181,14 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 # Set gaps size
 gaps inner 25
 gaps outer 0
+gaps top 55
 
 # Provide window class to float above tiled windows
 floating_maximum_size -1 x -1
 for_window [class="floating_window"] floating enable
 
 # Disable the title of windows
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"] border pixel 0
 
 # Setup workspace on my second monitor, doubt this is the ideal
 # solution, lol.
