--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -210,7 +210,7 @@ cursor_shape block
 #: the cursor shape to beam at shell prompts. You can avoid this by
 #: setting shell_integration to no-cursor.
 
-cursor_beam_thickness 1.5
+cursor_beam_thickness 2
 
 #: The thickness of the beam cursor (in pts).
 
@@ -218,7 +218,7 @@ cursor_underline_thickness 2.0
 
 #: The thickness of the underline cursor (in pts).
 
-cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -1274,7 +1274,7 @@ allow_hyperlinks yes
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-shell_integration enabled
+shell_integration enabled no-cursor
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
