Fix shadows/blur on some context/popup menus

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -48,7 +48,11 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",  
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -137,7 +141,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 #opacity-rule = [ "100:class_g = 'kitty' && focused", "100:class_g = 'kitty' && !focused" ];
 
-opacity-rule = ["90:class_g = 'kitty'", "100:class_g = 'jetbrains-clion'", "100:class_g = 'Code'"]
+opacity-rule = ["90:class_g = 'kitty'", "100:class_g = 'jetbrains-clion'", "100:class_g = 'Code'", "90:class_g = 'Audacious'"]
 
 #################################
 #           Corners             #
@@ -199,6 +203,10 @@ blur-background-exclude = [
 #  "window_type = 'dock'",
   "window_type = 'desktop'",
   "name = 'slop'",
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'"
 ];
 
 blur: {
