Add mic mute indicator

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -133,18 +133,18 @@ module-margin-right = 3
 ; See the Fonts wiki page for more details
 
 ; Main font of the bar
-font-0 = "Open Sans:pixelsize=10;3" 
+font-0 = "Noto Sans:pixelsize=10;3" 
 ; For the various different icons
 font-1 = "Material\\-Design\\-Iconic\\-Font:size=13;4"
 ; To make sure Japanese letters would render correctly in some song names 
 font-2 = "Noto Sans Mono CJK JP:pixelsize=10;3" 
 font-3 = "JetBrains Mono Extra Bold:pixelsize=12;3"
 font-4 = "Noto Sans:pixelsize=10;3"
-font-5 = "JetBrainsMonoNL Nerd Font:size=16;4"
+font-5 = "JetBrainsMonoNL Nerd Font:size=14;4"
 
 modules-left = arch workspaces spotify
 modules-center = title 
-modules-right = cpu memory network-down network-up pulseaudio date
+modules-right = mic cpu memory network-down network-up pulseaudio date
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
