--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -1159,7 +1159,7 @@ label-urgent-padding = 2
 label-occupied-padding = 2
 label-empty-padding = 2
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;; _-_-_-_-_-_-_-_-_~/.config/polybar/scripts/get_spotify_status.sh-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/spotify]
 type = custom/script
@@ -1169,7 +1169,7 @@ format-prefix = "    "
 format-prefix-foreground = ${color.primary}
 format = "%{T1}<label>%{T1}"
 exec = ~/.config/polybar/scripts/get_spotify_status.sh
-click-left = playerctl play-pause -p spotify,audacious
+click-left = playerctl play-pause -p audacious,spotify
 scroll-up = playerctl next -p spotify
 scroll-down = playerctl previous -p spotify
 
@@ -1191,6 +1191,13 @@ type = custom/script
 exec = echo "next-song-symbol"
 format = <label>
 click-left = playerctl next -p spotify
+
+[module/mic]
+type = custom/script
+exec = ~/.config/polybar/scripts/get_mic_status.sh
+format = "<label>"
+format-foreground = ${color.primary}
+interval=5
 
 [module/arch]
 type = custom/script
