--- a/i3/config
+++ b/i3/config
@@ -190,7 +190,7 @@ for_window [class="^.*"] border pixel 0
 #workspace $ws9 output HDMI-0
 
 # Mouse sensitivity
-exec --no-startup-id xinput --set-prop "pointer:Razer Razer DeathAdder V2" 'libinput Accel Speed' -0.7
+exec --no-startup-id xinput --set-prop 'pointer:Razer Razer DeathAdder V2' 'libinput Accel Speed' -0.7
 #exec --no-startup-id xinput --set-prop 11 'libinput Scrolling Pixel Distance' 40
 
 # Notification daemon
@@ -224,11 +224,11 @@ for_window [class="Gnome-system-monitor"] floating enable
 for_window [class="Pavucontrol"] floating enable
 
 # Auto start
-exec --no-startup-id (sleep 10 && vencord-desktop --enable-blink-features=MiddleClickAutoscroll)
+exec --no-startup-id (sleep 10 && discord --enable-blink-features=MiddleClickAutoscroll)
 #exec --no-startup-id steam
 exec --no-startup-id (sleep 10 && spotify-launcher)
 
 # Set personal work spaces
-for_window [class="VencordDesktop"] move to workspace $ws5
+for_window [class="discord"] move to workspace $ws5
 for_window [class="Spotify"] move to workspace $ws6
 for_window [class="steam"] move to workspace $ws7
