--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -1201,7 +1201,7 @@ interval=5
 
 [module/arch]
 type = custom/script
-exec = echo "%{T6}"
+exec = echo "%{T6}󰣇"
 format = "%{T6}<label>%{T1}"
 format-foreground = ${color.primary}
 format-padding = 0
