--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -60,8 +60,8 @@ fixed-center = false
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 1880
-height = 35
+width = 2520
+height = 45
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -133,16 +133,16 @@ module-margin-right = 3
 ; See the Fonts wiki page for more details
 
 ; Main font of the bar
-font-0 = "Noto Sans:pixelsize=10;3" 
+font-0 = "Inter Medium:pixelsize=12;4"
 ; For the various different icons
-font-1 = "Material\\-Design\\-Iconic\\-Font:size=13;4"
+font-1 = "Material\\-Design\\-Iconic\\-Font:size=15;4"
 ; To make sure Japanese letters would render correctly in some song names 
-font-2 = "Noto Sans Mono CJK JP:pixelsize=10;3" 
+font-2 = "Noto Sans Mono CJK JP:pixelsize=13;4" 
 font-3 = "JetBrains Mono Extra Bold:pixelsize=12;3"
-font-4 = "Noto Sans:pixelsize=10;3"
-font-5 = "JetBrainsMonoNL Nerd Font:size=14;4"
+font-4 = "Inter Medium:pixelsize=12;4"
+font-5 = "JetBrainsMono NF:size=17;5"
 
-modules-left = arch workspaces spotify
+modules-left = workspaces spotify
 modules-center = title 
 modules-right = mic cpu memory network-down network-up pulseaudio date
 
