Fix disconnect coloring

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -785,6 +785,7 @@ format-connected-prefix-foreground = ${color.primary}
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = 
+format-disconnected-prefix-foreground = ${color.primary}
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -868,6 +869,7 @@ format-connected-prefix-foreground = ${color.primary}
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = 
+format-disconnected-prefix-foreground = ${color.primary}
 
 ; Available tags:
 ;   <label-connected> (default)
