--- a/i3/config
+++ b/i3/config
@@ -32,6 +32,13 @@ bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 bindsym XF86AudioNext exec --no-startup-id playerctl next
 
+# Application specific volume
+bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id bash ~/.scripts/app_volume.sh spotify inc
+bindsym Shift+XF86AudioLowerVolume exec --no-startup-id bash ~/.scripts/app_volume.sh spotify dec
+
+bindsym Ctrl+XF86AudioRaiseVolume exec --no-startup-id bash ~/.scripts/app_volume_focused.sh inc
+bindsym Ctrl+XF86AudioLowerVolume exec --no-startup-id bash ~/.scripts/app_volume_focused.sh dec
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -71,7 +78,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+#bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -112,6 +119,10 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
+
+# scratchpad stuff
+bindsym $mod+a scratchpad show
+bindsym $mod+Shift+a move scratchpad
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -158,13 +169,21 @@ bindsym $mod+D exec --no-startup-id bash ~/.config/rofi/launchers/type-1/launche
 bindsym $mod+Shift+X exec --no-startup-id bash ~/.config/rofi/powermenu/type-3/powermenu.sh
 bindsym $mod+W exec --no-startup-id firefox
 bindsym $mod+E exec --no-startup-id nemo
-bindsym $mod+K exec --no-startup-id (cd ~/.m && bash ~/.m/runpv.sh)
+bindsym $mod+K exec --no-startup-id (cd ~/.m && ~/.m/m-pv)
+bindsym $mod+L exec --no-startup-id pavucontrol
+bindsym XF86Launch9 exec --no-startup-id ~/.m/m-cli --toggle
 
-bindsym $mod+M exec --no-startup-id ~/.m/m-cli --toggle
+# EQ presets (Pg Up & Pg Down)
+bindsym $mod+Prior exec --no-startup-id easyeffects -l headphones
+bindsym $mod+Next exec --no-startup-id easyeffects -l speaker
 
-# Screenshotting keybinds
+# EQ restart (occasionally wonky)
+bindsym $mod+P exec --no-startup-id systemctl --user restart easyeffects
+
+# Screenshotting keybind
 bindsym $mod+Shift+S exec --no-startup-id flameshot gui
 
+# Brightness control on laptop
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
