Smaller fonts and such

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -152,7 +152,9 @@ format-charging = %{F#60CCFA}<animation-charging>  %{F#D8DEE9}<label-charging>
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-format-discharging = %{F#60CCFA}<ramp-capacity>  %{F#D8DEE9}<label-discharging>
+format-discharging = <ramp-capacity>  %{F#D8DEE9}<label-discharging>
+format-discharging-foreground = ${color.primary}
+format-discharging-prefix-foreground = ${color.primary}
 
 ; Available tags:
 ;   <label-full> (default)
@@ -393,7 +395,7 @@ format-prefix-foreground = ${color.primary}
 ;   %date%
 ;   %time%
 ; Default: %date%
-label = %{T5}%time%
+label = %{T1}%time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -936,7 +938,7 @@ use-ui-max = false
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 5
+interval = 1
 
 ; Available tags:
 ;   <label-volume> (default)
