--- a/i3/config
+++ b/i3/config
@@ -156,11 +156,11 @@ bindsym $mod+r mode "resize"
 bindsym $mod+Return exec kitty
 bindsym $mod+D exec --no-startup-id bash ~/.config/rofi/launchers/type-1/launcher.sh
 bindsym $mod+Shift+X exec --no-startup-id bash ~/.config/rofi/powermenu/type-3/powermenu.sh
-bindsym $mod+W exec --no-startup-id google-chrome-stable
+bindsym $mod+W exec --no-startup-id firefox
 bindsym $mod+E exec --no-startup-id nemo
-bindsym $mod+K exec --no-startup-id (cd ~/.m && ~/.m/m-pv)
+bindsym $mod+K exec --no-startup-id (cd ~/.m && bash ~/.m/runpv.sh)
 
-bindsym XF86Launch9 exec --no-startup-id ~/.m/m-cli --toggle
+bindsym $mod+M exec --no-startup-id ~/.m/m-cli --toggle
 
 # Screenshotting keybinds
 bindsym $mod+Shift+S exec --no-startup-id flameshot gui
@@ -169,6 +169,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
 bindsym $mod+P exec --no-startup-id systemctl --user restart easyeffects
+bindsym $mod+O exec --no-startup-id bash ~/.scripts/scan_wifi.sh
 bindsym $mod+L exec --no-startup-id pavucontrol
 
 bindsym Pause exec --no-startup-id bash ~/.scripts/toggle_mute.sh
@@ -176,7 +177,7 @@ bindsym Pause exec --no-startup-id bash ~/.scripts/toggle_mute.sh
 # Set gaps size
 gaps inner 20
 gaps outer 0
-gaps top 70
+gaps top 60
 
 # Provide window class to float above tiled windows
 floating_maximum_size -1 x -1
@@ -191,6 +192,7 @@ workspace $ws9 gaps top 0
 
 # Mouse sensitivity
 exec --no-startup-id xinput --set-prop 'pointer:Razer Razer DeathAdder V2' 'libinput Accel Speed' -0.7
+exec --no-startup-id xinput --set-prop 'DELL091A:00 0488:121F Mouse' 'libinput Accel Speed' -0.7
 #exec --no-startup-id xinput --set-prop 11 'libinput Scrolling Pixel Distance' 40
 
 # Notification daemon
@@ -225,9 +227,9 @@ for_window [class="Pavucontrol"] floating enable
 #for_window [class="Nemo"] floating enable
 
 # Auto start
-exec --no-startup-id (sleep 10 && discord --enable-blink-features=MiddleClickAutoscroll)
+#exec --no-startup-id (sleep 10 && discord --enable-blink-features=MiddleClickAutoscroll)
 #exec --no-startup-id steam
-exec --no-startup-id (sleep 10 && spotify-launcher)
+#exec --no-startup-id (sleep 10 && spotify-launcher)
 
 # Set personal work spaces
 for_window [class="discord"] move to workspace $ws5
