--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -140,7 +140,7 @@ font-1 = "Material\\-Design\\-Iconic\\-Font:size=15;4"
 font-2 = "Noto Sans Mono CJK JP:pixelsize=13;4" 
 font-3 = "JetBrains Mono Extra Bold:pixelsize=12;3"
 font-4 = "Inter Medium:pixelsize=12;4"
-font-5 = "JetBrainsMono NF:size=17;5"
+#font-5 = "JetBrainsMono NF:size=17;5"
 
 modules-left = workspaces spotify
 modules-center = title 
