--- a/i3/config
+++ b/i3/config
@@ -171,7 +171,7 @@ bindsym $mod+W exec --no-startup-id firefox
 bindsym $mod+E exec --no-startup-id nemo
 bindsym $mod+K exec --no-startup-id (cd ~/.m && ~/.m/m-pv)
 bindsym $mod+L exec --no-startup-id pavucontrol
-bindsym XF86Launch9 exec --no-startup-id ~/.m/m-cli --toggle
+bindsym $mod+M exec --no-startup-id ~/.m/m-cli --toggle
 
 # EQ presets (Pg Up & Pg Down)
 bindsym $mod+Prior exec --no-startup-id easyeffects -l headphones
@@ -187,9 +187,7 @@ bindsym $mod+Shift+S exec --no-startup-id flameshot gui
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
-bindsym $mod+P exec --no-startup-id systemctl --user restart easyeffects
 bindsym $mod+O exec --no-startup-id bash ~/.scripts/scan_wifi.sh
-bindsym $mod+L exec --no-startup-id pavucontrol
 
 bindsym Pause exec --no-startup-id bash ~/.scripts/toggle_mute.sh
 
