--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -145,7 +145,9 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-format-charging = %{F#60CCFA}<animation-charging>  %{F#D8DEE9}<label-charging>
+format-charging = <animation-charging>  %{F#D8DEE9}<label-charging>
+format-charging-foreground = ${color.primary}
+format-charging-prefix-foreground = ${color.primary}
 
 ; Available tags:
 ;   <label-discharging> (default)
