Fix qalc center

--- a/i3/config
+++ b/i3/config
@@ -241,7 +241,8 @@ for_window [class="gnome-calculator"] floating enable
 for_window [class="Gnome-system-monitor"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="qalc"] floating enable
-#for_window [class="Nemo"] floating enable
+for_window [class="qalc"] resize set 1280 720
+for_window [class="qalc"] move position center
 
 # Auto start
 exec --no-startup-id (sleep 10 && discord --enable-blink-features=MiddleClickAutoscroll)
