Fix qalc and pine size

--- a/i3/config
+++ b/i3/config
@@ -244,7 +244,8 @@ for_window [class="Gnome-system-monitor"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="qalc"] floating enable
 for_window [class="qalc"] resize set 800 400
-#for_window [class="Nemo"] floating enable
+for_window [class="qalc"] move position center
+for_window [class="Pine Engine"] resize set 1664 936
 
 # Auto start
 #exec --no-startup-id (sleep 10 && discord --enable-blink-features=MiddleClickAutoscroll)
