--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -169,7 +169,7 @@ format-full-prefix = 
 ;   %percentage% (default)
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
-label-charging = %percentage%%
+label-charging = %percentage%% (%consumption% W)
 
 ; Available tokens:
 ;   %percentage% (default)
