--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,18 +5,19 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=DP-2, disabled
-monitor=DP-2, 1920x1080@144,0x0,1,transform,1
-monitor=DP-3, 2560x1440@165,1920x0,1,vrr,2
+monitor=DP-2, 1920x1080@60,0x0,1,transform,1
+monitor=DP-3, 2560x1440@165,1920x0,1
 
 # Some default env vars.
 env = WLR_NO_HARDWARE_CURSORS,1
 #env = LIBVA_DRIVER_NAME,nvidia
-#env = XDG_SESSION_TYPE,wayland
-#env = GBM_BACKEND,nvidia-drm
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = WLR_DRM_NO_ATOMIC,1
-env = __GL_GSYNC_ALLOWED,1
-env = __GL_VRR_ALLOWED,1
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GL_SYNC_DISPLAY_DEVICE=DP-3
+env = WLR_DRM_NO_ATOMIC,1
+#env = __GL_GSYNC_ALLOWED,1
+#env = __GL_VRR_ALLOWED,1
 #env = WLR_RENDERER=vulkan
 
 input {
@@ -83,12 +84,12 @@ device:razer-razer-deathadder-v2 {
 }
 
 misc {
-    vrr = 2
+    vrr = 0
     #no_direct_scanout = false
 }
 
 opengl {
-    nvidia_anti_flicker = 1
+    nvidia_anti_flicker = 0
 }
 
 $mainMod = SUPER
@@ -102,11 +103,12 @@ windowrulev2 = float, class:^(pavucontrol)$
 windowrulev2 = float, class:^(qalc)$
 
 # Auto launch
-exec-once=[workspace 5 silent] discord --enable-features=UseOzonePlatform --ozone-platform=wayland
-exec-once=[workspace 6 silent] spotify-launcher
 exec-once=waybar
 exec-once=wl-paste --primary --watch wl-copy --primary --clear
 exec-once=nvidia-settings --load-config-only
+exec-once=xrandr --output DP-3 --primary
+exec-once=[workspace 5 silent] discord --enable-features=UseOzonePlatform --ozone-platform=wayland
+exec-once=[workspace 6 silent] spotify-launcher
 
 # Workspaces
 windowrule=workspace 5,^(discord)$
@@ -127,9 +129,15 @@ exec-once=gsettings set org.gnome.desktop.interface gtk-theme 'Catppuccin-Mocha-
 exec-once=gsettings set org.gnome.desktop.interface font-name 'Noto Sans 9'
 exec-once=hyprpaper
 
+layerrule = blur,waybar
+layerrule = ignorezero,waybar
+layerrule = blur,notifications
+layerrule = ignorezero,notifications
+windowrulev2 = rounding 10,class:^(Dunst)$
+
 # Launch keybinds
 bind = $mainMod, Return, exec, kitty 
-bind = $mainMod, W, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = $mainMod, W, exec, google-chrome-stable --enable-features=UseOzonePlatform,VaapiVideoDecodeLinuxGL --ozone-platform=wayland
 bind = $mainMod, D, exec, bash /home/matte/.config/rofi/launchers/type-1/launcher.sh
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, L, exec, pavucontrol 
